# gigastt

./: .gitignore  .typos.toml  AGENTS.md  ANDROID.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.cuda  LICENSE  Makefile  NOTICE  README.md  README_RU.md  SECURITY.md  codecov.yml  coverage.json  deny.toml  lcov.info  results.json
.cargo/: audit.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: android-aar.yml  android.yml  benchmark.yml  ci.yml  docs.yml  homebrew.yml  ios-xcframework.yml  miri.yml  node-prebuilds.yml  python-wheels.yml  release-ane.yml  release-model.yml  release.yml  soak.yml
Formula/: gigastt.rb
benchmark/: .gitignore  DATA_LICENSE  Dockerfile  PR_DESCRIPTION.md  README.md  benchmark.py  benchmark_footprint.py  benchmark_hallucinations.py  benchmark_latency.py  benchmark_punctuation.py  benchmark_punctuation_heads.py  cache.py  common.py  docker-compose.yml  latency_note.md  monitor.sh  recompute_wer.py  requirements.lock.txt  requirements.txt  run_full_suite.sh
benchmark/manifests/: fleurs_kk.json  fleurs_ky.json  fleurs_ru_punct.json  fleurs_uz.json  golos_crowd_1k.json  golos_farfield.json  librispeech_test_clean.json  openstt_calls.json  openstt_youtube.json
benchmark/results_full/: ARCHIVED_FILES.txt  detailed_analysis.md  fleurs_kk_gigastt_ml_ctc.json  fleurs_kk_gigastt_ml_ctc_large.json  fleurs_ky_gigastt_ml_ctc.json  fleurs_ky_gigastt_ml_ctc_large.json  fleurs_uz_gigastt_ml_ctc.json  fleurs_uz_gigastt_ml_ctc_large.json  golos_crowd_1k_faster_whisper.json  golos_crowd_1k_faster_whisper_renorm.json  golos_crowd_1k_gigastt.json  golos_crowd_1k_gigastt_ml_ctc.json  golos_crowd_1k_gigastt_ml_ctc_large.json  golos_crowd_1k_gigastt_renorm.json  golos_crowd_1k_vosk.json  golos_crowd_1k_vosk_renorm.json  golos_crowd_1k_whisper_cpp.json  golos_crowd_1k_whisper_cpp_renorm.json  golos_farfield_faster_whisper.json  golos_farfield_faster_whisper_renorm.json  golos_farfield_gigastt.json  golos_farfield_gigastt_ml_ctc.json  golos_farfield_gigastt_ml_ctc_large.json  golos_farfield_gigastt_renorm.json  golos_farfield_vosk.json  golos_farfield_vosk_renorm.json  golos_farfield_whisper_cpp.json  golos_farfield_whisper_cpp_renorm.json  librispeech_test_clean_gigastt.json  librispeech_test_clean_gigastt_ml_ctc.json  librispeech_test_clean_gigastt_ml_ctc_large.json  openstt_calls_faster_whisper.json  openstt_calls_faster_whisper_renorm.json  openstt_calls_gigastt.json  openstt_calls_gigastt_renorm.json  openstt_calls_vosk.json  openstt_calls_vosk_renorm.json  openstt_calls_whisper_cpp.json  openstt_calls_whisper_cpp_renorm.json  openstt_youtube_faster_whisper.json  (+9 more)
benchmark/runners/: __init__.py  faster_whisper.py  faster_whisper_turbo.py  gigastt.py  gigastt_ml_ctc.py  t_one.py  vosk.py  (+2 more)
crates/gigastt/: Cargo.toml
crates/gigastt-core/: Cargo.toml  README.md
crates/gigastt-core/benches/: mel.rs  resample.rs  tokenizer.rs
crates/gigastt-core/examples/: quantize_file.rs
crates/gigastt-core/proptest-regressions/inference/: audio.txt
crates/gigastt-core/src/: error.rs  export.rs  itn.rs  lexicon.rs  lib.rs  punctuation.rs  quantize.rs  vad.rs
crates/gigastt-core/src/inference/: audio.rs  bias.rs  ctc.rs  decode.rs  features.rs  mod.rs  tokenizer.rs
crates/gigastt-core/src/model/: mod.rs
crates/gigastt-core/src/protocol/: mod.rs
crates/gigastt-core/src/runtime/: error.rs  factory.rs  mod.rs  session.rs  tensor.rs
crates/gigastt-core/src/runtime/candle/: config.rs  conformer.rs  factory.rs  mod.rs  runtime.rs  session.rs  tensor.rs
crates/gigastt-core/src/runtime/coreml/: bridge.rs  encoder_session.rs  factory.rs  mod.rs  runtime.rs
crates/gigastt-core/src/runtime/mock/: mod.rs  session.rs
crates/gigastt-core/src/runtime/ort/: factory.rs  mod.rs  session.rs  tensor.rs
crates/gigastt-core/tests/: candle_encoder_parity.rs  candle_rnnt_parity.rs  lean_build.rs  streaming_quality.rs  vad_file.rs
crates/gigastt-core/tests/fixtures/opus/: opus_tone_ffmpeg.pcm
crates/gigastt-core/tests/fixtures/telephony/: g722_tone_ffmpeg.pcm
crates/gigastt-ffi/: Cargo.toml  cbindgen.toml
crates/gigastt-ffi/include/: gigastt.h
crates/gigastt-ffi/src/: lib.rs
crates/gigastt-node/: .gitignore  Cargo.toml  README.md  gigastt.d.ts  install.js  loader.js  package.json
crates/gigastt-node/__test__/: smoke.cjs
crates/gigastt-node/src/: lib.rs
crates/gigastt-uniffi/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/gigastt-uniffi/src/: lib.rs
crates/gigastt/src/: batch.rs  lib.rs  main.rs
crates/gigastt/src/server/: bootstrap.rs  config.rs  http.rs  jobs.rs  metrics.rs  middleware.rs  mod.rs  rate_limit.rs  ws.rs
crates/gigastt/tests/: benchmark.rs  benchmark_baseline.json  e2e_admin_reload.rs  e2e_cli.rs  e2e_errors.rs  e2e_http_cov.rs  e2e_jobs.rs  e2e_rate_limit.rs  e2e_rest.rs  e2e_shutdown.rs  e2e_ws.rs
crates/gigastt/tests/common/: mod.rs
crates/gigastt/tests/fixtures/opus/: speech.opus
crates/gigastt/tests/fixtures/telephony/: speech.alaw  speech.g722  speech.ulaw
docs/: ane-backend.md  api.md  architecture.md  asyncapi.yaml  benchmark_narrative_draft.md  benchmarks.md  candle-backend.md  cli.md  deployment.md  embedding-packaging.md  hosted-demo-wasm-design.md  openapi.yaml  positioning-draft.md  privacy.md  quickstarts.md  runbook.md  self-hosted-runner.md  troubleshooting.md  verifying-releases.md
examples/: electron_main.mjs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: audio_decode.rs  pcm16_framing.rs  protocol_parse.rs  tokenizer.rs
scripts/: analyze_benchmark.py  build_model_deb.sh  build_offline_bundle.sh  check-docs-drift.allowlist  check-docs-drift.py  convert_gigaam_ane.py  convert_gigaam_candle.py  export_ml_ctc.py  extract_golos.py  extract_golos_farfield.py  fetch_offline_models.sh  generate_opus_fixtures.sh  generate_telephony_fixtures.sh  prepare_common_voice_fresh.py  prepare_common_voice_ru.py  prepare_fleurs.py  prepare_librispeech.py  prepare_openstt_calls.py  prepare_openstt_youtube.py  wer_unicode.py
specs/: plan.md  prod-readiness-v1.0.md  todo.md
(+75 files in other folders)
