[workspace]
members = ["crates/gigastt-core", "crates/gigastt-ffi", "crates/gigastt-uniffi", "crates/gigastt-node", "crates/gigastt"]
default-members = ["crates/gigastt"]
resolver = "3"

[workspace.package]
version = "2.3.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/ekhodzitsky/gigastt"

[profile.release]
lto = true
codegen-units = 1
strip = true
