[package]
name = "gigastt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core inference engine for gigastt — GigaAM v3 ONNX Runtime, model management, quantization"
keywords = ["stt", "speech-recognition", "gigaam", "onnx", "russian"]
categories = ["multimedia::audio"]

[lib]
crate-type = ["rlib"]
# The library's unit-test harness is not a benchmark; without this, plain
# `cargo bench` tries to run it as one and chokes on criterion's CLI flags.
bench = false

[features]
default = ["diarization"]
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
nnapi = ["ort/nnapi"]
diarization = ["dep:polyvoice"]
quantize = []
# Private/unstable: exposes internal items (tokenizer module + synthetic
# constructors) so the out-of-workspace `fuzz/` crate and criterion benches can
# reach them without a model on disk. Double underscore = not a public API
# surface; never enable in production builds.
__internals = []

[dependencies]
ort = "2.0.0-rc.12"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "signal", "macros", "fs"] }
futures-util = "0.3"
reqwest = { version = "0.13", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
thiserror = "2"
sha2 = "0.11"
hex = "0.4"
rustfft = "6"
rubato = "3.0"
symphonia = { version = "0.6", features = ["aac", "isomp4", "mp3", "ogg", "flac", "pcm", "wav"] }
bytes = "1"
prost = "0.14"
polyvoice = { version = "0.6.7", features = ["onnx"], optional = true }
parking_lot = "0.12"
libc = "0.2"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
proptest = "1"
criterion = "0.5"

[[bench]]
name = "mel"
harness = false

[[bench]]
name = "resample"
harness = false

[[bench]]
name = "tokenizer"
harness = false
required-features = ["__internals"]
