[package]
name = "gigastt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core inference engine for gigastt — GigaAM v3 ONNX Runtime, model management, quantization"
keywords = ["stt", "speech-recognition", "gigaam", "onnx", "russian"]
categories = ["multimedia::audio"]

[lib]
crate-type = ["rlib"]
# The library's unit-test harness is not a benchmark; without this, plain
# `cargo bench` tries to run it as one and chokes on criterion's CLI flags.
bench = false

[features]
default = ["diarization", "net", "async-pool", "file-decode"]
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
nnapi = ["ort/nnapi"]
diarization = ["dep:polyvoice"]
# Lean-build axes (all on by default; turn off for embedded targets that
# side-load models and feed raw PCM).
net = ["dep:reqwest", "dep:tokio", "dep:futures-util"]  # HTTP model download
async-pool = ["dep:tokio"]                              # async Pool::checkout; blocking path needs neither
file-decode = ["dep:symphonia"]                         # file transcription; raw-PCM streaming does not need it
ort-load-dynamic = ["ort/load-dynamic"]                 # system/vendored onnxruntime instead of download-binaries
quantize = []
# Private/unstable: exposes internal items (tokenizer module + synthetic
# constructors) so the out-of-workspace `fuzz/` crate and criterion benches can
# reach them without a model on disk. Double underscore = not a public API
# surface; never enable in production builds.
__internals = []

[dependencies]
ort = "2.0.0-rc.12"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "signal", "macros", "fs"], optional = true }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.13", features = ["stream"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
thiserror = "2"
sha2 = "0.11"
hex = "0.4"
rustfft = "6"
rubato = "3.0"
symphonia = { version = "0.6", features = ["aac", "isomp4", "mp3", "ogg", "flac", "pcm", "wav"], optional = true }
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
bytes = "1"
prost = "0.14"
polyvoice = { version = "0.7.0", features = ["onnx"], optional = true }
parking_lot = "0.12"
libc = "0.2"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
proptest = "1"
criterion = "0.8"

[[bench]]
name = "mel"
harness = false

[[bench]]
name = "resample"
harness = false

[[bench]]
name = "tokenizer"
harness = false
required-features = ["__internals"]
