[package]
name = "gigastt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core inference engine for gigastt — GigaAM v3 ONNX Runtime, model management, quantization"
keywords = ["stt", "speech-recognition", "gigaam", "onnx", "russian"]
categories = ["multimedia::audio"]

# Recognition heads are an additive, opt-in catalog, and `ModelVariant` is
# `#[non_exhaustive]` so new heads ship as minor releases (downstream must use a
# wildcard match arm). Allow the one-time `#[non_exhaustive]` marking, which
# cargo-semver-checks otherwise flags as a major-only change.
[package.metadata.cargo-semver-checks.lints]
enum_marked_non_exhaustive = "allow"
# The `SharedExtractor` diarization adapter lost the `UnwindSafe` / `RefUnwindSafe`
# auto traits when its inner extractor was swapped to polyvoice's fbank extractor
# (the fix for WeSpeaker rank-3 input, 2.11.2). `SharedExtractor` IS public
# (reachable as `inference::SharedExtractor` and via the `pub diarization_state`
# field of `inference::StreamingState`), so this is technically observable — but
# only to a consumer that `catch_unwind`s across a `StreamingState`, and these two
# panic-safety auto traits are among the least-relied-upon (Send/Sync have their
# own dedicated lints, unaffected). We accept it as a tolerated minor break on the
# diarization-only path rather than force a major bump for a bugfix; revisit at the
# next major (either restore the auto traits upstream in polyvoice or make the
# adapter genuinely `pub(crate)`).
auto_trait_impl_removed = "allow"

[lib]
crate-type = ["rlib"]
# The library's unit-test harness is not a benchmark; without this, plain
# `cargo bench` tries to run it as one and chokes on criterion's CLI flags.
bench = false

[features]
default = ["diarization", "net", "async-pool", "file-decode"]
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
nnapi = ["ort/nnapi"]
diarization = ["dep:polyvoice"]
# Lean-build axes (all on by default; turn off for embedded targets that
# side-load models and feed raw PCM).
net = ["dep:reqwest", "dep:tokio", "dep:futures-util"]  # HTTP model download
async-pool = ["dep:tokio"]                              # async Pool::checkout; blocking path needs neither
file-decode = ["dep:symphonia"]                         # file transcription; raw-PCM streaming does not need it
ort-load-dynamic = ["ort/load-dynamic"]                 # system/vendored onnxruntime instead of download-binaries
quantize = []
candle = ["dep:candle-core", "dep:candle-nn", "dep:safetensors"]
ane = ["dep:tar", "dep:objc2", "dep:objc2-core-ml", "dep:objc2-foundation", "dep:half"]
# Private/unstable: exposes internal items (tokenizer module + synthetic
# constructors) so the out-of-workspace `fuzz/` crate and criterion benches can
# reach them without a model on disk. Double underscore = not a public API
# surface; never enable in production builds.
__internals = []

[dependencies]
ort = "2.0.0-rc.12"
candle-core = { version = "0.11", optional = true }
candle-nn = { version = "0.11", optional = true }
safetensors = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "signal", "macros", "fs"], optional = true }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.13", features = ["stream"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
thiserror = "2"
sha2 = "0.11"
hex = "0.4"
rustfft = "6"
rubato = "3.0"
symphonia = { version = "0.6", features = ["aac", "isomp4", "mp3", "ogg", "flac", "pcm", "wav"], optional = true }
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
bytes = "1"
prost = "0.14"
polyvoice = { version = "0.9.0", features = ["onnx"], optional = true }
parking_lot = "0.12"
libc = "0.2"
tar = { version = "0.4", optional = true }
# half is cross-platform; the ANE bridge fills/reads Float16 MLMultiArray buffers.
half = { version = "2", optional = true }
# objc2 runtime is platform-agnostic at the crate level; the Apple-framework
# bindings below are gated to macOS so a non-macOS `--features ane` build still
# links (the bridge module is `#[cfg(target_os = "macos")]`).
objc2 = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.11", optional = true, features = ["metal"] }
candle-nn = { version = "0.11", optional = true, features = ["metal"] }
# Core ML / Apple Neural Engine bindings for the ANE encoder bridge. Each
# Objective-C class is gated behind its own cargo feature in objc2-core-ml /
# objc2-foundation, so we enumerate exactly the classes the bridge touches.
# MLModel_MLModelCompilation provides `compileModelAtURL_error`. NSNumber has no
# feature of its own — it is defined behind objc2-foundation's `NSValue` feature.
objc2-core-ml = { version = "0.3", optional = true, default-features = false, features = [
    "MLModel",
    "MLModel_MLModelCompilation",
    "MLModelConfiguration",
    "MLMultiArray",
    "MLFeatureValue",
    "MLFeatureProvider",
    "MLDictionaryFeatureProvider",
    "MLPredictionOptions",
] }
objc2-foundation = { version = "0.3", optional = true, default-features = false, features = [
    "NSArray",
    "NSString",
    "NSDictionary",
    "NSError",
    "NSURL",
    "NSValue",
] }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
proptest = "1"
criterion = "0.8"

[[bench]]
name = "mel"
harness = false

[[bench]]
name = "resample"
harness = false

[[bench]]
name = "tokenizer"
harness = false
required-features = ["__internals"]
