[package]
name = "gigastt-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C FFI bindings for gigastt — embed Russian speech recognition in any language"
keywords = ["stt", "speech-recognition", "ffi", "gigaam", "russian"]
categories = ["multimedia::audio", "api-bindings"]

[lib]
# cdylib for JNI / dynamic loading (Android, dlopen); staticlib (.a) for iOS /
# static linking into a host binary (consumed by the SwiftPM xcframework).
crate-type = ["staticlib", "cdylib"]

[features]
default = []
nnapi = ["gigastt-core/nnapi"]
coreml = ["gigastt-core/coreml"]
cuda = ["gigastt-core/cuda"]
diarization = ["gigastt-core/diarization"]

[dependencies]
gigastt-core = { version = "2.3.0", path = "../gigastt-core", default-features = false, features = ["file-decode"] }
serde_json = "1"
tracing = "0.1"

[build-dependencies]
cbindgen = "0.29"
