[package]
name = "gigastt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Local STT server powered by GigaAM v3 (rnnt head by default, e2e_rnnt optional) — on-device Russian speech recognition via ONNX Runtime"
keywords = ["stt", "speech-recognition", "gigaam", "onnx", "russian"]
categories = ["multimedia::audio", "command-line-utilities"]

[[bin]]
name = "gigastt"

[[test]]
name = "benchmark"
harness = false

# Debian package built by `cargo deb` (cargo-deb) in the release workflow:
# `gigastt_<ver>_amd64.deb` with the binary, the systemd unit, and the
# environment-file example. The companion data package
# `gigastt-model-int8_<ver>_all.deb` (models in /usr/share/gigastt/models/)
# is assembled separately by scripts/build_model_deb.sh. See
# docs/deployment.md, "Air-gapped / offline installation".
[package.metadata.deb]
maintainer = "Evgeny Khodzitsky <e@khodzitsky.ru>"
license-file = ["../../LICENSE", "0"]
depends = "$auto"
section = "sound"
priority = "optional"
extended-description = """\
On-device Russian speech-to-text server (WebSocket / REST / SSE on
127.0.0.1:9876) powered by the GigaAM v3 RNN-T model via ONNX Runtime.
No cloud APIs, no telemetry.
.
The model is not in this package: install the gigastt-model-int8 data
package (offline), or let gigastt download it from HuggingFace on first
start. Configuration: /etc/gigastt/gigastt.env; service: gigastt.service
(not auto-enabled)."""
assets = [
    ["target/release/gigastt", "usr/bin/gigastt", "755"],
    ["../../packaging/systemd/gigastt.service", "lib/systemd/system/gigastt.service", "644"],
    ["../../packaging/systemd/gigastt.env", "etc/gigastt/gigastt.env", "644"],
    ["../../README.md", "usr/share/doc/gigastt/README.md", "644"],
]
conf-files = ["/etc/gigastt/gigastt.env"]
maintainer-scripts = "../../packaging/debian/"

[features]
default = ["diarization"]
coreml = ["gigastt-core/coreml"]
cuda = ["gigastt-core/cuda"]
candle = ["gigastt-core/candle"]
ane = ["gigastt-core/ane"]
diarization = ["gigastt-core/diarization"]
quantize = ["gigastt-core/quantize"]

[dependencies]
gigastt-core = { version = "2.13.0", path = "../gigastt-core", default-features = false, features = ["net", "async-pool", "file-decode"] }

axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "signal", "macros", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
arc-swap = "1"
dashmap = "6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.30"
proptest = "1"
reqwest = { version = "0.13", features = ["stream"] }
